objects/Review__c.object
<CustomObject>
    <fields>
        <fullName>Interviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interviewer</label>
        <referenceTo>Interviewer__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Application__c</fullName>
        <label>Job Application</label>
        <referenceTo>Job_Application__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>add_new_text__c</fullName>
        <label>add new text</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>score__c</fullName>
        <label>score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <color>#FF0000</color>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <color>#FF0000</color>
                    <label>2</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <color>#FF0000</color>
                    <label>3</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <color>#E27001</color>
                    <label>4</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <color>#E27001</color>
                    <label>5</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <color>#E27001</color>
                    <label>6</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <color>#E27001</color>
                    <label>7</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <color>#78C953</color>
                    <label>8</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <color>#78C953</color>
                    <label>9</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <color>#78C953</color>
                    <label>10</label>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>test_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>test Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>test_encrypted_test__c</fullName>
        <label>test encrypted test</label>
        <length>120</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <label>Review</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Review Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>